# python_playground

./: .gitignore  README.md  module_a.py  module_b.py  module_c.py  pyproject.toml
llamaindextest/: main.py
src/: budget.ipynb  hello.py  module_a.py  module_b.py  openai_whisper_test.py  plotext_test.py  pyaudio_test.py  pyaudio_test_param.py  pydantic_test.ipynb
src/ckan/: ckan.py  ckanlib.py  swiss_open_data.ipynb
src/cli/: click_test.py
src/ipython/: ipythonwidgets.ipynb  magic_commands.ipynb  version.ipynb
src/langchaintest/: chains.ipynb  function_calling_openai.ipynb  langchaintest.py  prompt_templates.ipynb  recipe.md
src/llamaindextest/: main.py
src/notebooks/: dictionaries.ipynb
src/openai/: function_calling_openai.ipynb  recipe_template.j2  structured_output.ipynb
src/opendata/: ckanlib.py  code_cells.ipynb  code_cells.py  data.json  swiss_open_data.ipynb
src/opendata/arbeitslosen_statistik/: arbeitslose-kanton-zuerich.ipynb
src/pandas/: df_test.ipynb
src/perplexity/: api_call.ipynb
src/profiling/: lineprofiler.py  sys_memory.py  sys_memory_cells.py  timeit.py
src/python_core/basic_types/: strings_cells.ipynb  strings_cells.py  typing_tutorial.ipynb
src/python_core/classes/: privatemembers.ipynb
src/python_core/collections/: collections.ipynb  unpacking.ipynb
src/python_core/default_modules/: random.ipynb  sys.ipynb
src/python_core/difflib/: difflib.ipynb  text1.txt  text2.txt
src/python_core/functions/: function_params.ipynb  function_params_typing.py
src/python_core/profiling/: bmi_functions.py  line_profiler_cells.ipynb  memory_profiler_cells.ipynb  memory_profiler_cells.py  sys_memory_cells.ipynb  sys_memory_cells.py  timeit_cells.ipynb
src/speech_to_text/: analyze_mp3.py  audio_stream_test.py  capture_audio.py  list_input_devices.py  openai_whisper_test.py  openai_whisper_transcript.py  pyaudio_create_recording.py
src/textualtest/: stopwatch.py  textualui.py
