[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.11",
    "textual-plotext>=0.2.1",
    "ckanapi>=4.8",
    "ipykernel>=6.29.5",
    "numpy>=2.2.0",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pedalboard>=0.9.16",
    "sounddevice>=0.5.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "matplotlib>=3.10",
    "line-profiler>=4.2.0"
]
