[project]
name = "python-playground"
version = "1.0.0"
description = "Python Playground to try new frameworks and test language features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.11",
    "textual-plotext>=0.2.1",
    "textual>=2.1.2",
    "ckanapi>=4.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "ipython>=9.0.1",
    "numpy>=2.2.0",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pedalboard>=0.9.16",
    "sounddevice>=0.5.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "matplotlib>=3.10",
    "line-profiler>=4.2.0",
    # memory_profiler is not maintaned anymore!!!
    # https://github.com/pythonprofilers/memory_profiler
    "memory_profiler>=0.61.0",
    "notebook>=7.3.2",
    "pydantic>=2.10.6",
    "jinja2>=3.1.6",
    "click>=8.1.8"
]

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.9.9",
    "mypy>=1.15.0"
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "D"]

[tool.mypy]
ignore_missing_imports = true